# qt_qxq2223

./: .bumpversion.cfg  .cirrus.yml  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
ipynb/: init.ipynb
reqs/: req-ipynb.txt
